Closed Bug 943353 Opened 11 years ago Closed 11 years ago

Don't include X11 headers if MOZ_X11 is undefined

Categories

(Core :: WebRTC: Audio/Video, defect)

26 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: dmitry.rojkov, Assigned: romaxa)

References

Details

Attachments

(1 file, 2 obsolete files)

Attached patch disable-x11-bits.patch (obsolete) — Splinter Review
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:25.0) Gecko/20100101 Firefox/25.0 (Beta/Release) Build ID: 20131115110311 Steps to reproduce: Try to build web engine with the configure option --without-x and with no X11 headers installed. Actual results: gecko doesn't build Expected results: gecko should build successfully
Seems to be fixed in 29.0a1
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
Resolution: --- → WORKSFORME
No it is not fixed in 29... patch is still needed
Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: WORKSFORME → ---
Attachment #8338467 - Attachment is obsolete: true
Attachment #8363382 - Flags: review?(rjesup)
Comment on attachment 8363382 [details] [diff] [review] Ifdef X11 API usage under MOZ_X11 Review of attachment 8363382 [details] [diff] [review]: ----------------------------------------------------------------- These are upstream files from webrtc.org; almost all patches to those files should at least be possible uplift candidates. This means that it should not use MOZ_* defines; it should use a gyp variable (which exists: use_x11) to enable compiler defines for the audio code (a conditional 'defines' section). Then the use_x11 default (1 on non-win/mac/android/ios) should be overridden in build/gyp.mozbuild if X11 is not supported in our build. Once we have a known-good patch, we should open an Issue at webrtc.org, and upload a patch made against the trunk of the webrtc.org codebase to their codereview site. (And link to the Issue in our bug.) Thanks!
Attachment #8363382 - Flags: review?(rjesup) → review-
Ok sounds like we have already USE_X11 defined and it is not enabled in my non-x11 environment. http://mxr.mozilla.org/mozilla-central/search?string=USE_X11&find=webrtc&findi=&filter=^[^\0]*%24&hitlimit=&tree=mozilla-central
Attachment #8363382 - Attachment is obsolete: true
Attachment #8363697 - Flags: review?(rjesup)
Comment on attachment 8363697 [details] [diff] [review] Ifdef X11 API usage under USE_X11 Review of attachment 8363697 [details] [diff] [review]: ----------------------------------------------------------------- Thanks! Please mark as checkin-needed (in Keywords); if it won't let you comment here. And please open an Issue at webrtc.org, and if you can download the trunk of their codebase and upload a patch to their codereview.
Attachment #8363697 - Flags: review?(rjesup) → review+
Attachment #8363697 - Flags: checkin?
Keywords: checkin-needed
Comment on attachment 8363697 [details] [diff] [review] Ifdef X11 API usage under USE_X11 Please use only checkin-needed.
Attachment #8363697 - Flags: checkin?
Status: REOPENED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Depends on: 1005784
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: