Bug 943353 - Don't include X11 headers if USE_X11 is undefined. r=jesup